--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.12",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "vue": "^3.2.13",
+    "vue-tailwind": "^2.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
